--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 30 13:05:31 2018</p>
+         Last Run: Mon Jul 30 14:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,48 +33,48 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>13</td>
-                        <td>43</td>
+                        <td>14</td>
+                        <td>42</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>1</td>
-                        <td>46</td>
-                        <td>1</td>
                         <td>14</td>
+                        <td>47</td>
+                        <td>1</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>32</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>2</td>
-                        <td>52</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>13</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>31</td>
+                        <td>ESE</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>1</td>
-                        <td>59</td>
+                        <td>2</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
-                        <td>31</td>
+                        <td>37</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "25",
                  "23",
-                 "22",
+                 "21",
                  "20"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "25",
                  "23",
-                 "22",
+                 "21",
                  "20"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "14",
+                 "14",
                  "13",
-                 "1",
-                 "2",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
-                 "46",
-                 "52",
-                 "59"
+                 "42",
+                 "47",
+                 "53",
+                 "61"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "32",
-                 "31",
-                 "31"
+                 "29",
+                 "34",
+                 "33",
+                 "37"
                ]
              }
            ]
