--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 30 14:05:12 2018</p>
+         Last Run: Mon Jul 30 15:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
                         <td>14</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>23</td>
                         <td>23</td>
                         <td>14</td>
-                        <td>47</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>53</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -72,7 +72,7 @@
                         <td>2</td>
                         <td>61</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SE</td>
                         <td>37</td>
                      </tr>
@@ -188,7 +188,7 @@
                "data":[
                  "14",
                  "14",
-                 "13",
+                 "14",
                  "2"
                ]
              },
@@ -197,8 +197,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "47",
+                 "43",
+                 "48",
                  "53",
                  "61"
                ]
@@ -208,9 +208,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "34",
+                 "30",
                  "33",
+                 "34",
                  "37"
                ]
              }
