--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 31 00:05:26 2018</p>
+         Last Run: Tue Jul 31 01:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -31,10 +31,10 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -42,39 +42,39 @@
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>Clear</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>42</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>44</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>1</td>
+                        <td>5</td>
                         <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,9 +119,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "25",
                  "24",
                  "23",
-                 "22",
                  "21"
                ]
              },
@@ -131,9 +131,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "25",
                  "24",
                  "23",
-                 "22",
                  "21"
                ]
              }
@@ -189,7 +189,7 @@
                  "0",
                  "0",
                  "0",
-                 "1"
+                 "5"
                ]
              },
              {
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "46",
-                 "49",
+                 "43",
+                 "45",
+                 "50",
                  "57"
                ]
              },
@@ -209,9 +209,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "41",
-                 "42",
-                 "44",
-                 "34"
+                 "29",
+                 "38",
+                 "33"
                ]
              }
            ]
