--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 31 03:05:27 2018</p>
+         Last Run: Tue Jul 31 04:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,23 +30,23 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>19</td>
+                        <td>34</td>
                         <td>42</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>43</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>2</td>
-                        <td>46</td>
+                        <td>6</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>18</td>
                         <td>SE</td>
@@ -57,24 +57,24 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>0</td>
+                        <td>2</td>
                         <td>51</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>41</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>6</td>
+                        <td>11</td>
                         <td>57</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "19",
+                 "34",
+                 "6",
                  "2",
-                 "0",
-                 "6"
+                 "11"
                ]
              },
              {
@@ -198,7 +198,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "42",
-                 "46",
+                 "47",
                  "51",
                  "57"
                ]
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
+                 "50",
                  "37",
-                 "41",
-                 "40"
+                 "37",
+                 "39"
                ]
              }
            ]
