--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 31 06:05:04 2018</p>
+         Last Run: Tue Jul 31 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>15</td>
+                        <td>16</td>
                         <td>41</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -48,31 +48,31 @@
                         <td>23</td>
                         <td>45</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SE</td>
                         <td>64</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>10</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>6</td>
                         <td>54</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>60</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>2</td>
-                        <td>58</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>3</td>
+                        <td>59</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>SE</td>
                         <td>53</td>
                      </tr>
@@ -121,8 +121,8 @@
                "data":[
                  "25",
                  "24",
-                 "22",
-                 "21"
+                 "21",
+                 "20"
                ]
              },
              {
@@ -133,8 +133,8 @@
                "data":[
                  "25",
                  "24",
-                 "22",
-                 "21"
+                 "21",
+                 "20"
                ]
              }
            ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
+                 "16",
                  "23",
-                 "10",
-                 "2"
+                 "6",
+                 "3"
                ]
              },
              {
@@ -200,7 +200,7 @@
                  "41",
                  "45",
                  "54",
-                 "58"
+                 "59"
                ]
              },
              {
@@ -208,9 +208,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
+                 "50",
                  "64",
-                 "60",
+                 "59",
                  "53"
                ]
              }
